Fix more small student errors

--- a/_posts/2021-10-26-Seaborn.md
+++ b/_posts/2021-10-26-Seaborn.md
@@ -2,9 +2,9 @@
 title: See More with Seaborn
 layout: post
 author: alexnorris
-post-image: ![startimage](/assets/images/blogimages/figs-10-26/Blogpic.png)
+post-image: /assets/images/blogimages/figs-10-26/Blogimage.png
 description: A brief overview of the Python library Seaborn
-tags: 
+tags:
 - Seaborn
 - Data Visualization
 - Statistics Plots
@@ -14,20 +14,20 @@ tags:
 
 The Seaborn library is a Python package which creates data visualizations based on the matplotlib library. As a result, this blog post will assume that the reader has a basic understanding of the matplotlib library. The main draw to the Seaborn library is its ability to create more visually appealing data plots than the matplotlib. Additionally, Seaborn plots contain more attributes which allow plots to contain more characteristics than their matplotlib counterparts.
 
-Throughout this blog post, we will go over a few different plots and the characteristics available through the Seaborn library. Of course this post will by no means be exhaustive. Thus, the reader is encouraged to delve further on their own for more information regarding the remarkable abilities of Seaborn plots. For those interested more examples can be found at https://seaborn.pydata.org/examples/index.html which displays a variety of various plots some of which the reader may be unaware exists. 
+Throughout this blog post, we will go over a few different plots and the characteristics available through the Seaborn library. Of course this post will by no means be exhaustive. Thus, the reader is encouraged to delve further on their own for more information regarding the remarkable abilities of Seaborn plots. For those interested more examples can be found at https://seaborn.pydata.org/examples/index.html which displays a variety of various plots some of which the reader may be unaware exists.
 
 # Setting Up
 
-For this post I will be using the diamonds dataset which comes with the Seaborn library. There are a number of datasets which come with Seaborn which can be used for exploring Seaborn plots, one can Google the Seaborn datasets if the reader desires to explore the datasets. If one desires to use a Seaborn dataset they can load the data using the following code: `sns.load_dataset("dataset")`, otherwise load in the data using other methods the reader is familiar with. 
+For this post I will be using the diamonds dataset which comes with the Seaborn library. There are a number of datasets which come with Seaborn which can be used for exploring Seaborn plots, one can Google the Seaborn datasets if the reader desires to explore the datasets. If one desires to use a Seaborn dataset they can load the data using the following code: `sns.load_dataset("dataset")`, otherwise load in the data using other methods the reader is familiar with.
 
 To the observant reader, one can deduce that the Python shortcut for Seaborn is sns, thus, loading the Seaborn library would be as follows:
 ```
 import seaborn as sns
 import matplotlib.pyplot as plt
 
-``` 
+```
 
-It is usual to also include the matplotlib plot library when using seaborn since both libraries can be used together. In fact matplotlib is used for plot titles, legends, and other custom alterations to the plot. 
+It is usual to also include the matplotlib plot library when using seaborn since both libraries can be used together. In fact matplotlib is used for plot titles, legends, and other custom alterations to the plot.
 
 # Creating Plots
 
@@ -43,7 +43,7 @@ To create a scatterplot the code is as follows:
 sns.scatterplot(data = diamonds, x = 'carat', y = 'price', hue = 'color', size = 'clarity', alpha = 0.5)
 ```
 
-![scatter](/assets/images/blogimages/figs-10-26/scatterplot.png) 
+![scatter](/assets/images/blogimages/figs-10-26/scatterplot.png)
 
 Hue allows to user to make each unique variable delcared a different color, so in the plot above each color represents a unique diamond color.
 Size is similar to the hue attribute as it allows the size of each dot to be different depending on the unique values of the variable provided.
