--- a/_posts/2021-11-22-top-10-skills.md
+++ b/_posts/2021-11-22-top-10-skills.md
@@ -2,7 +2,7 @@
 title: Top 10 Skills a future Data Scientist should learn while their machine is also learning.
 layout: post
 author: gmw72721
-post-image: !(/assets/images/blogimages/figs-11-22/post_image.png)
+post-image: /assets/images/blogimages/figs-11-22/post_image.png
 description: Understanding the most important skills that a data scientist should have
 tags:
 - Big Data 
