--- a/_posts/2021-09-30-Py-Studio.md
+++ b/_posts/2021-09-30-Py-Studio.md
@@ -29,61 +29,69 @@ to review your setup!
 
 In this post, I will cover a couple of things:
 1.  How to use RMarkdown to run and take note of python code
-2.  How to 
+2.  How to use RMarkdown to create different file types
 
-This post will show you how the content will look like in the post pages and how the headlines, quotes and quotes will be represented. Jekyll is mainly used to write simple markdown and after that it renders out a static pages, so you need to know the basics of writing markdown for that.
-For more information about writing markdown you can checkout the following markdown cheatsheets:
-* [Mastering Markdown](https://guides.github.com/features/mastering-markdown/)
-* [Markdown Guide](https://www.markdownguide.org/cheat-sheet/)
-* [GitHub Flavored Markdown Spec](https://github.github.com/gfm/)
-
+This post will show you how the content will be written and displayed in Rmarkdown.
 ---
 
-# This is the h1 text
-## This is the h2 text
-### This is the h3 text
-#### This is the h4 text
-##### This is the h5 text
-###### This is the h6 text
+## Creating an R Markdown File
 
-**Bold Text in the post will look like:**<br>
-**This text is Bold**
+You can create an R Markdown notebook from a jupyter notebook using the following line of code:
 
-**Italic Text in the post will look like:**<br>
-*This text is Italic*
+    # convert to R Markdown
+    nb_rmd <- rmarkdown:::convert_ipynb(nb_file)
+    
+Note the use of the triple colon ":::". This is not a double.
 
-> Quotes on your post will look like this
+write the object to a .Rmd file and you are good to go!
 
-`Codes on your post will look like this`
+You can also open the file using R Studio.
 
-**Link in the post will look like:**<br>
-[This is a link](#)
+## Creating Different File Types
 
-**Bullet list in the post will look like:**
-* Item 1
-* Item 2
-* Item 3
-* Item 4
-* Item 5
+Please note you can create the different file types a number of different ways.
 
-**Number list in the post will look like:**
-1. Item 1
-2. Item 2
-3. Item 3
-4. Item 4
-5. Item 5
+You can use RStudio, and create a template, or you can specify the file type in the YAML header.
 
-**Images in the post will look like:**<br>
-![Test Image](../assets/images/canada.JPG)
+* beamer_presentation
+* context_document
+* github_document
+* html_document
+* ioslides_presentation
+* latex_document
+* md_document
+* odt_document
+* pdf_document
+* powerpoint_presentation
+* rtf_document
+* slidy_presentation
+* word_document
 
-**Normal text in the post will look like**<br>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id finibus nisl. Etiam in hendrerit est. Nulla non erat ac lectus interdum lobortis. Vestibulum at mi ex. Mauris nisl mi, venenatis et feugiat nec, finibus porttitor velit. Suspendisse tincidunt lobortis leo, quis tristique tellus iaculis quis. Donec eleifend pulvinar gravida. Proin non lorem eros. Donec sit amet finibus ex, eget vestibulum nunc. Ut ut enim id purus porttitor tristique. Vivamus tincidunt eleifend hendrerit. Proin metus felis, ultrices vel dui in, porta dapibus dui. Sed sagittis ex vitae dui tristique dignissim. Cras vel leo ipsum.
+I will also note that there are other output formats provided using other extension packages.
+If you decide to use an extension package, you need to include the package name in the header, like so:
 
-Aenean ac neque et risus mattis accumsan. Sed ac tellus molestie, lacinia ante sit amet, convallis felis. Maecenas aliquet lectus nec euismod auctor. Donec finibus pellentesque tortor, ac efficitur metus suscipit non. Proin diam orci, blandit quis malesuada ac, efficitur a nisl. Mauris eleifend consequat blandit. Sed egestas quam et orci gravida, non euismod metus scelerisque. Curabitur venenatis pellentesque erat commodo pharetra. Fusce id ante nec ipsum fringilla auctor. In justo quam, feugiat placerat eleifend dapibus, luctus et quam. Fusce facilisis erat ut odio convallis viverra et id mauris. Sed vehicula tempus consectetur. Aliquam pharetra, purus non egestas tristique, tellus massa fringilla est, id sagittis tellus urna non mauris. Suspendisse fringilla, velit nec blandit facilisis, ligula ante imperdiet est, et placerat magna sem quis tortor.
+    output: tufte::tufte_html
+    
+Much of this is possible through Pandoc, which makes it possible to convert a Markdown
+file into many other different formats.
 
-Vestibulum vitae fermentum velit, rhoncus egestas orci. Nulla at purus ut orci posuere vulputate. In eget leo diam. In congue in diam nec elementum. Suspendisse fringilla ante nulla, eu tristique orci ultrices eget. Aenean non lorem tellus. Vestibulum tempor metus sit amet tellus feugiat, sit amet consequat lacus ultricies.
+Using ioslides or Slidy, beamer, and powerpoint, you can create interactive slides in html, css, and microsoft powerpoint. 
+The most important thing to keep in mind,
+is that headers are translated as h1 text being the title of the slides, h2 text being a new section, 
+and so on.
 
-Donec imperdiet, lectus eget congue cursus, dolor enim finibus risus, ut molestie lorem tellus non tortor. Donec quam nibh, molestie in dapibus et, efficitur non tortor. Morbi orci tellus, mollis vel mi vitae, auctor lobortis erat. Ut gravida velit eget ligula lacinia, id rhoncus tellus gravida. Maecenas laoreet rutrum consequat. Suspendisse sed nibh dui. Curabitur dictum euismod mollis. Sed egestas libero libero, eu accumsan augue placerat non. Nunc id condimentum orci. Mauris vitae sollicitudin quam.
+### Dashboards
 
-**Giphy Gifs will look like:**<br>
-<iframe src="https://giphy.com/embed/ZqlvCTNHpqrio" width="480" height="259" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/laughing-despicable-me-minions-ZqlvCTNHpqrio">via GIPHY</a></p>
+You can also use ramrkdown to create a dashboard using the *flexdashboard* package.
+
+From [bookdown.org](https://bookdown.org/yihui/rmarkdown/layout.html):
+> The overall rule about the dashboard layout is that a first-level section generates a page, a second-level section generates a column 
+(or a row), and a third-level section generates a box (that contains one or more dashboard components).
+
+
+Be sure to take a look at your options. You can also use python or R code with Shiny. 
+
+-----
+
+Thanks to Pandoc and Rmarkdown, your options for creating different formats to express the same information,
+all just by changing the YAML header. I hope you found this post inspiring.
