--- a/_posts/2021-10-28-plotyly.md
+++ b/_posts/2021-10-28-plotyly.md
@@ -112,6 +112,7 @@ py.plot(fig, filename = 'Trendline', auto_open=True)
 
 After doing this, you should automatically be taken to a link in your account where you can see your interactive graph. 
 
+[Example Interactive Plot](https://chart-studio.plotly.com/~bethanybassett/1/#/).
 
 ## Conclusion
 
